# obunch

./: Cargo.toml  README.md  hOnDelivery,
fill-fake/: Cargo.toml
fill-fake/src/: main.rs
item-service/: Cargo.toml
item-service/src/: lib.rs
menu-service/: Cargo.toml
menu-service/src/: lib.rs
migrations/item/: down.sql  up.sql
migrations/menu/: down.sql  up.sql
migrations/order/: down.sql  up.sql
migrations/shop/: down.sql  up.sql
order-service/: Cargo.toml
order-service/src/: lib.rs
order/order-dao/: Cargo.toml
order/order-migration/: Cargo.toml
order/order-model/: Cargo.toml
order/order-model/src/: lib.rs
order/order-service/: Cargo.toml
order/order-service/src/: lib.rs
shop-service/: Cargo.toml
shop-service/src/: lib.rs
src/: errors.rs  main.rs  models.rs  request_models.rs
src/menu/menu-dao/: Cargo.toml
src/menu/menu-migration/: Cargo.toml
src/menu/menu-model/: Cargo.toml
src/menu/menu-model/src/: lib.rs
src/menu/menu-service/src/: lib.rs
src/order/order-model/: Cargo.toml
src/order/order-model/src/: lib.rs
src/shop/shop-dao/: Cargo.toml
src/shop/shop-migration/: Cargo.toml
src/shop/shop-model/: Cargo.toml
src/shop/shop-model/src/: lib.rs
src/shop/shop-service/: Cargo.toml
src/shop/shop-service/src/: lib.rs
