[package]
name = "obunch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v1"] }
env_logger = "0.9.0"
# Local workspace deps
order-service = { path = "order-service" }

menu-service = { path = "menu-service" }

shop-service = { path = "shop-service" }

