[package]
name = "shop-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = "4.0.0-beta.8"
serde = {version="1.0", features=["derive"]}
tokio-postgres = "0.7.2"
deadpool-postgres = "0.9.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
fake = "2.4.1"
